--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "underscore": "*",
     "jquery": "*",
     "moment": "*",
-    "escape-html": "*"
+    "escape-html": "*",
+    "passport": "*",
+    "passport-facebook": "*"
   }
 }
